--- a/index.html
+++ b/index.html
@@ -529,9 +529,13 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
 
+
+    
+
+
     <!-- JS -->
     <script src="./js/footAndHead.js"></script>
-
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
