--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="section-title">
                         <h2>Sản phẩm nổi bật</h2>
                     </div>
-                    <div class="featured__controls">
+                    <!-- <div class="featured__controls">
                         <ul>
                             <li class="active" data-filter="*">Tất cả sản phẩm</li>
                             <li data-filter=".1">Điện thoại</li>
@@ -100,7 +100,7 @@
                             <li data-filter=".3">Phụ kiện</li>
                             <li data-filter=".4">Thời trang</li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row featured__filter" id="danhsach">
@@ -530,10 +530,10 @@
     <script src="js/main.js"></script>
     
     <!-- JS -->
-    <script src="./js/footAndHead.js"></script>
     <script src="js/sanpham/hiensanpham.js" defer type="module"></script>
     <script src="js/danhmuc/hiendanhmuc.js" defer type="module"></script>
     <script src="js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
+    <script src="./js/footAndHead.js"></script>
 
     
 
