--- a/index.html
+++ b/index.html
@@ -53,18 +53,8 @@
                                 <i class="fa fa-bars"></i>
                                 <span>Tất cả danh mục</span>
                             </div>
-                            <ul>
-                                <li><a href="#">Fresh Meat</a></li>
-                                <li><a href="#">Vegetables</a></li>
-                                <li><a href="#">Fruit & Nut Gifts</a></li>
-                                <li><a href="#">Fresh Berries</a></li>
-                                <li><a href="#">Ocean Foods</a></li>
-                                <li><a href="#">Butter & Eggs</a></li>
-                                <li><a href="#">Fastfood</a></li>
-                                <li><a href="#">Fresh Onion</a></li>
-                                <li><a href="#">Papayaya & Crisps</a></li>
-                                <li><a href="#">Oatmeal</a></li>
-                                <li><a href="#">Fresh Bananas</a></li>
+                            <ul id="mainmenu">
+                                <!-- render menu -->
                             </ul>
                         </div>
                     </div>
