--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link href="./img/logo.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
 </head>
@@ -450,19 +451,19 @@
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.nice-select.min.js"></script>
+    <script src="./js/jquery-ui.min.js"></script>
+    <script src="./js/jquery.slicknav.js"></script>
+    <script src="./js/mixitup.min.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
 
     <!-- JS -->
-    <script src="js/sanpham/hiensanpham.js" defer type="module"></script>
-    <script src="js/danhmuc/hiendanhmuc.js" defer type="module"></script>
-    <script src="js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
+    <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
+    <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
+    <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
     <script src="./js/footAndHead.js"></script>
     <script src="./js/script.js"></script>
 </body>
