--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ogani | Template</title>
+    <title>Silk-Road</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
@@ -20,8 +20,11 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/newStyle.css" type="text/css">
 </head>
+
 
 <body>
     <!-- Page Preloder -->
@@ -78,13 +81,13 @@
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Tên<span>*</span></p>
-                                        <input type="text" value="Nhập tên">
+                                        <input type="text" placeholder="Nhập tên">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Họ<span>*</span></p>
-                                        <input type="text" value="Nhập họ">
+                                        <input type="text" placeholder="Nhập họ">
                                     </div>
                                 </div>
                             </div>
@@ -96,13 +99,13 @@
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Số điện thoại<span>*</span></p>
-                                        <input type="number" value="nhập Số điện thoại">
+                                        <input type="number" placeholder="nhập Số điện thoại">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Email<span>*</span></p>
-                                        <input type="email" value="Nhập email">
+                                        <input type="email" placeholder="Nhập email">
                                     </div>
                                 </div>
                             </div>
@@ -130,14 +133,14 @@
                                 <div class="checkout__input__checkbox">
                                     <label for="payment">
                                         Chuyển khản
-                                        <input type="checkbox" id="payment">
+                                        <input type="radio" name="pay"  id="payment">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
                                 <div class="checkout__input__checkbox">
                                     <label for="paypal">
                                         Thanh toán trực tiếp
-                                        <input type="checkbox" id="paypal">
+                                        <input type="radio" name="pay" id="paypal">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
