--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link href="./img/logo.png" rel="icon">
+    <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
 </head>
@@ -56,6 +56,34 @@
                             </div>
                             <ul id="mainmenu">
                                 <!-- render menu -->
+                                    <!-- <li class="rightmenu">
+                                        <a href="#">
+                                            Fresh Meat
+                                        </a>
+                                        <ul class="nav-menu">
+                                            <li>qqq</li>
+                                            <li>ccc</li>
+                                            <li>vvv</li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Vegetables</a></li>
+                                    <li><a href="#">Fruit & Nut Gifts</a></li>
+                                    <li><a href="#">Fresh Berries</a></li>
+                                    <li><a href="#">Ocean Foods</a></li>
+                                    <li><a href="#">Butter & Eggs</a></li>
+                                    <li><a href="#">Fastfood</a></li>
+                                    <li><a href="#">Fresh Onion</a></li>
+                                    <li class="rightmenu">
+                                        <a href="#">Papayaya & Crisps</a>
+                                    
+                                        <ul class="nav-menu">
+                                            <li>qqq</li>
+                                            <li>ccc</li>
+                                            <li>vvv</li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Oatmeal</a></li>
+                                    <li><a href="#">Fresh Bananas</a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -153,6 +181,8 @@
                     </div> -->
                 </div>
             </div>
+
+            <!-- All SP -->
             <div class="row featured__filter" id="danhsach">
                 <!-- render SP -->
             </div>
@@ -384,7 +414,7 @@
     <!-- Latest Product Section End -->
 
     <!-- Blog Section Begin -->
-    <section class="from-blog spad">
+    <!-- <section class="from-blog spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -441,7 +471,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Blog Section End -->
 
     <!-- Footer Section Begin -->
@@ -466,6 +496,16 @@
     <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
     <script src="./js/footAndHead.js"></script>
     <script src="./js/script.js"></script>
+    <!-- <script>
+        let mainmenu = document.getElementById('mainmenu');
+        let navmenu = document.getElementById('navmenu');
+
+        if(mainmenu.style.display = 'none'){
+            navmenu.style.display = 'none';
+        }else{
+            navmenu.style.display = 'block'
+        }
+    </script> -->
 </body>
 
 </html>
