--- a/index.html
+++ b/index.html
@@ -612,10 +612,11 @@
 
     <!-- JS -->
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
-    <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
     <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
+    <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
     <script src="./js/footAndHead.js"></script>
     <script src="./js/script.js"></script>
+    <Script src="./js/giohang/themvaogiohang.js"></Script>
     <!-- <script>
         let mainmenu = document.getElementById('mainmenu');
         let navmenu = document.getElementById('navmenu');
