tao mới làm cái chi tiết sản phẩm

--- a/shop-details.html
+++ b/shop-details.html
@@ -73,8 +73,8 @@
     <!-- Product Details Section Begin -->
     <section class="product-details spad">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6">
+            <div id="product_detail" class="row">
+                <!-- <div class="col-lg-6 col-md-6">
                     <div class="product__details__pic">
                         <div class="product__details__pic__item">
                             <img class="product__details__pic__item--large"
@@ -211,7 +211,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- Product Details Section End -->
 
@@ -309,6 +309,7 @@
 
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
+    <script src="./js/sanpham/chitietsanpham.js" defer type="module"></script>
 
 </body>
 
