--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 	<!-- Hero Section End -->
 
 	<!-- Breadcrumb Section Begin -->
-	<section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
+	<section class="breadcrumb-section set-bg" data-setbg="./img/banner-3.png">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -73,7 +73,7 @@
 		<div class="container py-5 h-100">
 			<div class="row d-flex align-items-center justify-content-center h-100">
 				<div class="col-md-8 col-lg-7 col-xl-6">
-					<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
+					<img src="./img/banner/banner-4.png"
 						class="img-fluid" alt="Phone image">
 				</div>
 				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
@@ -94,23 +94,20 @@
 								<label class="form-check-label" for="form1Example3"> Lưu tài khoản </label>
 							</div>
 							<a href="#!">Quên mật khẩu ?</a>
-							<a href="./resigter.html">Chưa có tài khoản </a>
 						</div>
 
 						<button type="submit" class="btn btn-primary btn-lg btn-block">Đăng nhập</button>
 
 						<div class="divider d-flex align-items-center my-4">
-							<p class="text-center fw-bold mx-3 mb-0 text-muted">Hoặc</p>
+							<p>Bạn không có tài khoản 
+							<a href="./resigter.html" 
+							style="color:#003049; font-weight:600;">Đăng ký ngay!</a>
+						</p>
 						</div>
 
-						<a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-							role="button">
-							<i class="fa fa-facebook me-2"></i> Đăng nhập bằng Facebook
-						</a>
-						<a class="btn btn-primary btn-lg btn-block" style="background-color: #ee5a55" href="#!"
-							role="button">
-							<i class="fa fa-google me-2"></i> Continue with Twitter
-						</a>
+						<a class="btn btn-primary btn-lg btn-block" 
+						style="background-color: #ee5a55" href="#!" role="button">
+							<i class="fa fa-google me-2"></i> Đăng nhập với Google</a>
 
 					</form>
 				</div>
