--- a/resigter.html
+++ b/resigter.html
@@ -52,7 +52,7 @@
 	<!-- Hero Section End -->
 
 	<!-- Breadcrumb Section Begin -->
-	<section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
+	<section class="breadcrumb-section set-bg" data-setbg="img/banner-3.png">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -74,36 +74,36 @@
 		<div class="container py-5 h-100">
 			<div class="row d-flex align-items-center justify-content-center h-100">
 				<div class="col-md-8 col-lg-7 col-xl-6">
-					<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
+					<img src="./img/banner/banner-5.png"
 						class="img-fluid" alt="Phone image">
 				</div>
 				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
 					<form>
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form1Example13">Họ và tên</label>
+							<label class="form-label" for="form1Example13">Họ và tên<span style="color:#ff0000">*</span></label>
 							<input type="email" id="form1Example13" class="form-control form-control-lg"
-								placeholder="Nhập Họ và tên" />
+								placeholder="Nhập họ và tên" />
 						</div>
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form1Example13">Email</label>
+							<label class="form-label" for="form1Example13">Email<span style="color:#ff0000">*</span></label>
 							<input type="email" id="form1Example13" class="form-control form-control-lg"
 								placeholder="Nhập email" />
 						</div>
 						<!-- Email input -->
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form1Example13">Email</label>
-							<input type="email" id="form1Example13" class="form-control form-control-lg"
-								placeholder="Nhập email" />
+							<label class="form-label" for="form1Example13">Số điện thoại<span style="color:#ff0000">*</span></label>
+							<input type="number" id="form1Example13" class="form-control form-control-lg"
+								placeholder="Nhập số điện thoại" />
 						</div>
 
 						<!-- Password input -->
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form1Example23">Mật khẩu</label>
+							<label class="form-label" for="form1Example23">Mật khẩu<span style="color:#ff0000">*</span></label>
 							<input type="password" id="form1Example23" class="form-control form-control-lg"
 								placeholder="Nhập mật khẩu" />
 						</div>
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form1Example23">Xác nhận mật khẩu</label>
+							<label class="form-label" for="form1Example23">Xác nhận mật khẩu<span style="color:#ff0000">*</span></label>
 							<input type="password" id="form1Example23" class="form-control form-control-lg"
 								placeholder="Nhập mật khẩu" />
 						</div>
