--- a/shop-details.html
+++ b/shop-details.html
@@ -310,6 +310,7 @@
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
     <script src="./js/sanpham/chitietsanpham.js" defer type="module"></script>
+    <Script src="./js/giohang/themvaogiohang.js"></Script>
 
 </body>
 
