--- a/checkout.html
+++ b/checkout.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
@@ -116,11 +117,8 @@
                             </div>
                             <div class="col-lg-6">
                                     <h5>Mã giảm giá:</h5>
-                                    <select id="km" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                                        <option selected>Open this select menu</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
+                                    <select id="km" >
+                                        
                                       </select>
                             </div>
                         </div>
@@ -179,7 +177,6 @@
     <script src="js/footAndHead.js"></script>
     <script src="./js/giohang/khuyenmai.js" defer type="module"></script>
     <Script src="./js/giohang/thanhtoan.js"></Script>
-    <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
 
 </body>
 
