--- a/shop-grid.html
+++ b/shop-grid.html
@@ -517,6 +517,7 @@
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
     <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
     <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
+    <Script src="./js/giohang/themvaogiohang.js"></Script>
 
 </body>
 
