--- a/checkout.html
+++ b/checkout.html
@@ -172,6 +172,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="./js/toastr-alert.js"></script>
 
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
