--- a/index.html
+++ b/index.html
@@ -56,35 +56,7 @@
                                 <span>Tất cả danh mục</span>
                             </div>
                             <ul id="mainmenu">
-                                <!-- render menu -->
-                                    <!-- <li class="rightmenu">
-                                        <a href="#">
-                                            Fresh Meat
-                                        </a>
-                                        <ul class="nav-menu">
-                                            <li>qqq</li>
-                                            <li>ccc</li>
-                                            <li>vvv</li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Vegetables</a></li>
-                                    <li><a href="#">Fruit & Nut Gifts</a></li>
-                                    <li><a href="#">Fresh Berries</a></li>
-                                    <li><a href="#">Ocean Foods</a></li>
-                                    <li><a href="#">Butter & Eggs</a></li>
-                                    <li><a href="#">Fastfood</a></li>
-                                    <li><a href="#">Fresh Onion</a></li>
-                                    <li class="rightmenu">
-                                        <a href="#">Papayaya & Crisps</a>
-                                    
-                                        <ul class="nav-menu">
-                                            <li>qqq</li>
-                                            <li>ccc</li>
-                                            <li>vvv</li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Oatmeal</a></li>
-                                    <li><a href="#">Fresh Bananas</a></li> -->
+                                <!-- render -->
                             </ul>
                         </div>
                     </div>
@@ -96,7 +68,7 @@
                                         Tất cả
                                         <span class="arrow_carrot-down"></span>
                                     </div>
-                                    <input type="text" placeholder="What do yo u need?">
+                                    <input type="text" placeholder="Bạn muốn tìm gì?">
                                     <button type="submit" class="site-btn">Tìm kiếm</button>
                                 </form>
                             </div>
@@ -609,6 +581,7 @@
     <script src="./js/mixitup.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/toastr-alert.js"></script>
 
     <!-- JS -->
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
@@ -617,16 +590,7 @@
     <script src="./js/footAndHead.js"></script>
     <script src="./js/script.js"></script>
     <Script src="./js/giohang/themvaogiohang.js"></Script>
-    <!-- <script>
-        let mainmenu = document.getElementById('mainmenu');
-        let navmenu = document.getElementById('navmenu');
 
-        if(mainmenu.style.display = 'none'){
-            navmenu.style.display = 'none';
-        }else{
-            navmenu.style.display = 'block'
-        }
-    </script> -->
 </body>
 
 </html>
