--- a/admin/index.html
+++ b/admin/index.html
@@ -221,8 +221,14 @@
                               <a class="nav-link" href="./pages/brand/brand.html">Danh mục</a>
                           </li>
                           <li class="nav-item">
+                            <a class="nav-link" href="./pages/danhmuctong/dmtong.html">Danh mục tổng</a>
+                        </li>
+                          <li class="nav-item">
                               <a class="nav-link" href="./pages/brand/addbrand.html">Thêm danh mục</a>
                           </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="./pages/danhmuctong/themdmtong.html">Thêm danh mục tổng</a>
+                        </li>
                       </ul>
                   </div>
               </li>
