--- a/admin/pages/brand/addbrand.html
+++ b/admin/pages/brand/addbrand.html
@@ -340,7 +340,7 @@
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
     <script src="../../js/Chart.roundedBarCharts.js"></script>
-    <script src="../js/brands.js"></script>
+    <script src="../js/themloai.js"></script>
     <!-- End custom js for this page-->
 </body>
 
