--- a/admin/pages/danhmuctong/dmtong.html
+++ b/admin/pages/danhmuctong/dmtong.html
@@ -293,21 +293,30 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
-                        <div class="col-md-6 grid-margin stretch-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="card-title">Sửa danh mục</h4>
-                                    <form class="forms-sample">
-                                        <div class="form-group">
-                                            <label for="exampleInputUsername1">Tên danh mục</label>
-                                            <input type="text" class="form-control" id="ten"
-                                                placeholder="Tên danh mục">
-                                        </div>
-                                        <button id="btnluu" type="submit" class="btn btn-primary sua me-2">Submit</button>
-                                        <button class="btn btn-danger xoa ">Cancel</button>
-                                    </form>
-                                </div>
-                            </div>
+                        <h4 class="card-title">Bordered table</h4>
+                        <p class="card-description">
+                            Add class <code>.table-bordered</code>
+                        </p>
+                        <div class="table-responsive pt-3">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Tên</th>
+                                        <th>Hành động</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="brand">
+                                    <!-- <tr>
+                                        <td>1</td>
+                                        <td>Herman Beck</td>
+                                        <td>
+                                            <button class="badge badge-primary sua button">Sửa</button>
+                                            <button class="badge badge-danger xoa button">Xóa</button>
+                                        </td>
+                                    </tr> -->
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -335,16 +344,13 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-    <!-- endinject -->
+<!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
     <script src="../../js/Chart.roundedBarCharts.js"></script>
-    <script src="../js/brands.js"></script>
-    <script src="../js/suadanhmuc.js"></script>
     <!-- End custom js for this page-->
+    <Script src="../js/dmtong.js"></Script>
 </body>
 
 </html>
-
-
