--- a/admin/pages/danhmuctong/suadmtong.html
+++ b/admin/pages/danhmuctong/suadmtong.html
@@ -296,7 +296,7 @@
                         <div class="col-md-6 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title">Sửa danh mục</h4>
+                                    <h4 class="card-title">Thêm danh mục</h4>
                                     <form class="forms-sample">
                                         <div class="form-group">
                                             <label for="exampleInputUsername1">Tên danh mục</label>
