--- a/admin/pages/danhmuctong/themdmtong.html
+++ b/admin/pages/danhmuctong/themdmtong.html
@@ -296,7 +296,7 @@
                         <div class="col-md-6 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title">Sửa danh mục</h4>
+                                    <h4 class="card-title">Thêm danh mục</h4>
                                     <form class="forms-sample">
                                         <div class="form-group">
                                             <label for="exampleInputUsername1">Tên danh mục</label>
@@ -335,13 +335,12 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-    <!-- endinject -->
+  <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
     <script src="../../js/Chart.roundedBarCharts.js"></script>
-    <script src="../js/brands.js"></script>
-    <script src="../js/suadanhmuc.js"></script>
+    <script src="../js/dmtong.js"></script>
     <!-- End custom js for this page-->
 </body>
 
