--- a/shop-grid-2.html
+++ b/shop-grid-2.html
@@ -336,7 +336,7 @@
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
     <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
-    <script src="./js/sanpham/locsanpham.js" defer type="module"></script>
+    <script src="./js/sanpham/locsanpham2.js" defer type="module"></script>
     <Script src="./js/giohang/themvaogiohang.js"></Script>
 
 </body>
