--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
                             <div class="latest-prdouct__slider__item">
                                 <a href="#" class="latest-product__item">
                                     <div class="latest-product__item__pic">
-                                        <img src="https://i5.walmartimages.com/asr/6cfc0a4d-9d7f-4677-bc2e-ab1f6f40f7c8_1.c623235467c519d7d921b46a36a506f3.jpeg" alt="">
+                                        <img src="https://cdn.tgdd.vn/Products/Images/42/289691/iphone-14-pro-tim-thumb-600x600.jpg" alt="">
                                     </div>
                                     <div class="latest-product__item__text">
-                                        <h6>Apple Watch Ultra GPS</h6>
-                                        <span>23.990.000 VNĐ</span>
+                                        <h6>Iphone 14 Promax</h6>
+                                        <span>33.990.000 VNĐ</span>
                                     </div>
                                 </a>
                                 <a href="#" class="latest-product__item">
