--- a/userdetail.html
+++ b/userdetail.html
@@ -67,7 +67,7 @@
         <div class="col-lg-4">
           <div class="card mb-4">
             <div class="card-body text-center">
-              <img src="" alt="avatar"
+              <img src="https://cf.shopee.vn/file/41beb461c8ddb4a43ce62bb119f3b642" alt="avatar"
                 class="rounded-circle img-fluid" style="width: 150px;">
               <h5 class="my-3">Nguyễn Hoàng Triệu</h5>
             </div>
