--- a/shop-grid-2.html
+++ b/shop-grid-2.html
@@ -100,58 +100,58 @@
                                     <div class="latest-prdouct__slider__item">
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-1.jpg" alt="">
+                                                <img src="https://i5.walmartimages.com/asr/6cfc0a4d-9d7f-4677-bc2e-ab1f6f40f7c8_1.c623235467c519d7d921b46a36a506f3.jpeg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
+                                                <h6>Apple Watch Ultra GPS</h6>
+                                                <span>23.990.000 VNĐ</span>
                                             </div>
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-2.jpg" alt="">
+                                                <img src="https://product.hstatic.net/200000384421/product/old-tone-metal-packshot-default__1__4c4f14ea341f4727897cdf7463f9e15b.png" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
+                                                <h6>Túi Chanel Printed Fabric Metal 'Multicolor'</h6>
+                                                <span>131.000.000 VNĐ</span>
                                             </div>
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-3.jpg" alt="">
+                                                <img src="https://product.hstatic.net/200000384421/product/3946-2afd-4886-9692-0ed57f823687_900x_d1a0e90613ed4e4f89aca04f931f9faf_00a0f34c471d4b12abf08d60619527df.png" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
+                                                <h6>Xvessel G.O.P.HIGHS Khaki</h6>
+                                                <span>8.900.000 VNĐ</span>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="latest-prdouct__slider__item">
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-1.jpg" alt="">
+                                                <img src="https://i5.walmartimages.com/asr/6cfc0a4d-9d7f-4677-bc2e-ab1f6f40f7c8_1.c623235467c519d7d921b46a36a506f3.jpeg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
+                                                <h6>Apple Watch Ultra GPS</h6>
+                                                <span>23.990.000 VNĐ</span>
                                             </div>
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-2.jpg" alt="">
+                                                <img src="https://product.hstatic.net/200000384421/product/old-tone-metal-packshot-default__1__4c4f14ea341f4727897cdf7463f9e15b.png" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
+                                                <h6>Túi Chanel Printed Fabric Metal 'Multicolor'</h6>
+                                                <span>131.000.000 VNĐ</span>
                                             </div>
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-3.jpg" alt="">
+                                                <img src="https://product.hstatic.net/200000384421/product/3946-2afd-4886-9692-0ed57f823687_900x_d1a0e90613ed4e4f89aca04f931f9faf_00a0f34c471d4b12abf08d60619527df.png" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
+                                                <h6>Xvessel G.O.P.HIGHS Khaki</h6>
+                                                <span>8.900.000 VNĐ</span>
                                             </div>
                                         </a>
                                     </div>
