--- a/admin/pages/order/order.html
+++ b/admin/pages/order/order.html
@@ -51,11 +51,15 @@
                                     <tr>
                                         <th>ID</th>
                                         <th>ID khách hàng</th>
+                                        <th>ID khuyến mãi</th>
                                         <th>Tên khách hàng</th>
+                                        <th>Email</th>
                                         <th>Ngày đặt</th>
                                         <th>Địa chỉ</th>
                                         <th>Điện thoại</th>
-                                        <th>Ghi chú</th>
+                                        <th>Phương thức thanh toán</th>
+                                        <th>Ghi chú khách hàng</th>
+                                        <th>Ghi chú Admin</th>
                                         <th>Trạng thái</th>
                                         <th>Hành động</th>
                                     </tr>
