--- a/admin/pages/product/product.html
+++ b/admin/pages/product/product.html
@@ -56,8 +56,8 @@
                                         <th>Giảm giá</th>
                                         <th>Ngày nhập</th>
                                         <th>Số lượng</th>
-                                        <!-- <th>Mô tả</th> -->
-                                        <!-- <th>Lượt xem</th> -->
+                                        <th>Mô tả</th>
+                                        <th>Lượt xem</th>
                                         <th>Trạng thái</th>
                                         <th>Hành động</th>
                                     </tr>
