--- a/admin/pages/user/user.html
+++ b/admin/pages/user/user.html
@@ -50,11 +50,10 @@
                                 <thead>
                                     <tr>
                                         <th>ID</th>
+                                        <th>Tên khách hàng</th>
                                         <th>Hình ảnh</th>
-                                        <th>Họ và Tên</th>
-                                        <th>Tên tài khoản</th>
-                                        <th>Mật khẩu</th>
                                         <th>Email</th>
+                                        <th>Mật khẩu</th>
                                         <th>Số điện thoại</th>
                                         <th class="des">Địa chỉ</th>
                                         <th>Vai trò</th>
