--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
+    <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
@@ -20,9 +21,8 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link href="./img/favicon/Silkroad.png" rel="icon">
+    <link rel="stylesheet" href="css/toastr.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/newStyle.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
 </head>
 
@@ -454,7 +454,8 @@
     <script src="./js/mixitup.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
-    <script src="./js/toastr-alert.js"></script>
+    <!-- <script src="./js/toastr-alert.js"></script> -->
+    <script src="./js/toastr.min.js"></script>
 
     <!-- JS -->
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
