--- a/checkout.html
+++ b/checkout.html
@@ -24,6 +24,7 @@
     <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
+    <link rel="stylesheet" href="css/toastr.min.css" type="text/css">
 </head>
 
 
@@ -53,7 +54,7 @@
     <!-- Hero Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="img/banner-3.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -175,7 +176,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="./js/toastr-alert.js"></script>
+    <script src="./js/toastr.min.js"></script>
 
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
