--- a/admin/pages/danhmuctong/themdmtong.html
+++ b/admin/pages/danhmuctong/themdmtong.html
@@ -47,10 +47,10 @@
                         <div class="col-md-6 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title">Thêm danh mục</h4>
+                                    <h4 class="card-title">Thêm danh mục tổng</h4>
                                     <form class="forms-sample">
                                         <div class="form-group">
-                                            <label for="exampleInputUsername1">Tên danh mục</label>
+                                            <label for="exampleInputUsername1">Tên danh mục tổng</label>
                                             <input type="text" class="form-control" id="ten"
                                                 placeholder="Tên danh mục">
                                         </div>
