--- a/admin/pages/product/addproduct.html
+++ b/admin/pages/product/addproduct.html
@@ -47,7 +47,7 @@
                         <div class="col-md-6 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title">Thêm danh mục</h4>
+                                    <h4 class="card-title">Thêm sản phẩm</h4>
                                     <form class="forms-sample">
                                         <div class="form-group">
                                             <label for="exampleFormControlSelect2">Danh mục</label>
