--- a/userdetail.html
+++ b/userdetail.html
@@ -45,13 +45,13 @@
     </header>
     <!-- Header Section End -->
 
-    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="img/banner-3.png">
       <div class="container">
           <div class="row">
               <div class="col-lg-12 text-center">
                   <div class="breadcrumb__text">
                       <h2>Silk Road</h2>
-                      <div class="breadcrumb__option">
+                      <div class="breadcrumb__option" style="">
                           <a href="./index.html">Trang chủ</a>
                           <span>Tài khoản</span>
                       </div>
