fix lọc sp, chi tiết và bình luận

--- a/shop-details.html
+++ b/shop-details.html
@@ -256,11 +256,11 @@
                                     <div class="form-outline">
                                         <textarea class="form-control" id="textAreaExample" rows="4"></textarea>
                                     </div>
-                                    <div class="d-flex justify-content-between mt-3">
+                                    <div id="binhluan" class="d-flex justify-content-between mt-3">
                                         <button type="button" class="btn btn-primary">
                                             Send <i class="fas fa-long-arrow-alt-right ms-1"></i>
-                                        </button>
-                                    </div>
+                                            </button>
+                                            </div>
                                 </div>
                             </div>
                         </div>
@@ -279,22 +279,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg">
-                            <ul class="product__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
-                        </div>
-                    </div>
-                </div>
+            <div class="row" id="locsanpham">
+                
                 
             </div>
         </div>
