--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -57,8 +57,15 @@
                                     <h4 class="mt-0 header-title">Danh mục</h4>
                                     <div class="form">
                                         <div class="form-group">
+                                            <label>Tên danh mục tổng</label>
+                                            <select name="category" id="category" class="form-control">
+                                                
+
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
                                             <label>Tên danh mục</label>
-                                            <input type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
+                                            <input type="text" class="form-control" name="name" required="" placeholder="Tên danh mục...">
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <label class="btn btn-outline-success waves-effect waves-light m-r-10">
