--- a/admin/dmTong.html
+++ b/admin/dmTong.html
@@ -58,8 +58,8 @@
                             <div class="col-lg-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
-                                        <h4 class="mt-0 header-title">Danh mục</h4>
-                                        <a href="add-category.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm danh mục +</a>
+                                        <h4 class="mt-0 header-title">Danh mục tổng</h4>
+                                        <a href="add-dmtong.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm danh mục tổng +</a>
                                         <div class="table-responsive">
                                             <table class="table mb-0">
                                                 <thead>
@@ -144,7 +144,7 @@
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/javascript/brands.js"></script>
+    <script src="assets/javascript/dmtong.js"></script>
 
 
 </body>
