--- a/admin/add-dmtong.html
+++ b/admin/add-dmtong.html
@@ -47,55 +47,45 @@
                 <!-- Top Bar Start -->
                 <div class="topbar" id="topBar">
 
-                    
                 </div>
                 <!-- Top Bar End -->
-
-                <div class="page-content-wrapper ">
-
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="card m-b-30">
-                                    <div class="card-body">
-                                        <h4 class="mt-0 header-title">Danh mục</h4>
-                                        <a href="add-category.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm danh mục +</a>
-                                        <div class="table-responsive">
-                                            <table class="table mb-0">
-                                                <thead>
-                                                    <tr>
-                                                        <th>#</th>
-                                                        <th>Tên danh mục</th>
-                                                        <th>Trạng thái</th>
-                                                        <th>Action</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody class="renderCategory" id="brand">
-                                                    <!-- <tr>
-                                                        <th>1</th>
-                                                        <td>Mark</td>
-                                                        <td>Otto</td>
-                                                        <td>@mdo</td>
-                                                        <td>@mdo</td>
-                                                        <td>@mdo</td>
-                                                        <td>
-                                                            <span class="btn btn-info">Sửa</span>
-                                                            <span class="btn btn-danger">Xóa</span>
-                                                        </td>
-                                                    </tr> -->
-                                                </tbody>
-                                            </table>
+                <div class="page-content-wrapper">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="card m-b-30">
+                                <div class="card-body">
+                                    <h4 class="mt-0 header-title">Danh mục tổng</h4>
+                                    <div class="form">
+                                        <div class="form-group">
+                                            <label>Tên danh mục</label>
+                                            <input type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
                                         </div>
-
+                                        <label for="" class="m-r-15">Trạng thái: </label>
+                                        <label class="btn btn-outline-success waves-effect waves-light m-r-10">
+                                            <input type="radio" name="stt" id="stt1" value="1" checked>
+                                            Hiện
+                                    </label>
+                                        <label class="btn btn-outline-danger waves-effect waves-light">
+                                            <input type="radio" name="stt" id="stt2" value="0">
+                                            Ẩn
+                                    </label>
+                                        <div class="form-group">
+                                            <div>
+                                                <button type="submit" class="btn btn-primary waves-effect waves-light btn-category">
+                                            Thêm
+                                            </button>
+                                                <a href="">
+                                                    <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                                Cancel
+                                                    </button>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- end col -->
                         </div>
-
                     </div>
-                    <!-- container fluid -->
-
                 </div>
                 <!-- Page content Wrapper -->
 
@@ -132,9 +122,10 @@
     <script src="assets/plugins/peity/jquery.peity.min.js"></script>
 
     <!--Morris Chart-->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="assets/plugins/morris/morris.min.js"></script>
     <script src="assets/plugins/raphael/raphael-min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <!-- dashboard -->
     <script src="assets/pages/dashboard.js"></script>
@@ -142,9 +133,9 @@
     <!-- App js -->
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
+    <script src="assets/javascript/category.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/javascript/brands.js"></script>
 
 
 </body>
