--- a/admin/category.html
+++ b/admin/category.html
@@ -65,12 +65,12 @@
                                                 <thead>
                                                     <tr>
                                                         <th>#</th>
-                                                        <th>Tên danh mục</th>
+                                                        <th>Tên</th>
                                                         <th>Trạng thái</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody class="renderCategory" id="brand">
+                                                <tbody class="renderCategory">
                                                     <!-- <tr>
                                                         <th>1</th>
                                                         <td>Mark</td>
@@ -144,7 +144,7 @@
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/javascript/brands.js"></script>
+    <script src="assets/javascript/category.js"></script>
 
 
 </body>
