--- a/admin/member.html
+++ b/admin/member.html
@@ -63,17 +63,14 @@
                                                 <thead>
                                                     <tr>
                                                         <th>#</th>
-                                                        <th>Tên người dùng</th>
-                                                        <th>Mật khẩu</th>
-                                                        <th>Hình ảnh</th>
+                                                        <th>Tên</th>
                                                         <th>Địa chỉ</th>
                                                         <th>Email</th>
-                                                        <th>SĐT</th>
-                                                        <th>Vai trò</th>
+                                                        <th>Trạng thái</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody class="renderMember" id="kh">
+                                                <tbody class="renderMember">
 
                                                 </tbody>
                                             </table>
@@ -137,7 +134,6 @@
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/product.js"></script>
-    <script src="assets/javascript/users.js"></script>
 
 
 </body>
