--- a/admin/thongBao.html
+++ b/admin/thongBao.html
@@ -57,7 +57,8 @@
                             <div class="col-lg-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
-                                        <h4 class="mt-0 header-title">Đơn hàng</h4>
+                                        <h4 class="mt-0 header-title">Thông báo</h4>
+                                        <a href="add-product.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm thông báo +</a>
                                         <div class="table-responsive">
                                             <table class="table mb-0">
                                                 <thead>
