--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
                                 </a>
                                 <a href="#" class="latest-product__item">
                                     <div class="latest-product__item__pic">
-                                        <img src="https://product.hstatic.net/200000384421/product/old-tone-metal-packshot-default__1__4c4f14ea341f4727897cdf7463f9e15b.png" alt="">
+                                        <img src="https://kyma.vn/storedata/images/product/panasonic-agdvx200-2.jpg" alt="">
                                     </div>
                                     <div class="latest-product__item__text">
-                                        <h6>Túi Chanel Printed Fabric Metal 'Multicolor'</h6>
-                                        <span>131.000.000 VNĐ</span>
+                                        <h6>Máy Ảnh Panasonic AG-DVX200EN8</h6>
+                                        <span>105.000.000 VNĐ</span>
                                     </div>
                                 </a>
                                 <a href="#" class="latest-product__item">
